@@ -16,12 +16,11 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
-import org.springframework.web.cors.CorsConfiguration; // 【新增】导入
-import org.springframework.web.cors.CorsConfigurationSource; // 【新增】导入
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource; // 【新增】导入
-
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import javax.servlet.http.HttpServletResponse;
-import java.util.Arrays; // 【新增】导入
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -48,11 +47,11 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         // 允许来自前端开发服务器的所有请求
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:8081"));
+        configuration.setAllowedOrigins(List.of("http://localhost:8081"));
         // 允许所有请求方法 (GET, POST, PUT, DELETE, OPTIONS)
-        configuration.setAllowedMethods(Arrays.asList("*"));
+        configuration.setAllowedMethods(List.of("*"));
         // 允许所有请求头
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         // 允许浏览器发送Cookie等凭证
         configuration.setAllowCredentials(true);
 
